# kendryte_k210_template

./: .gitignore  README.md
project/: CMakeLists.txt  main.c
project/BSP/: CMakeLists.txt
project/BSP/system_src/: entry_user.c
project/Harts/: CMakeLists.txt
project/Harts/include/: Harts.h
project/Harts/src/: Hart0.c  Hart1.c
project/cmake/: kendryte_k210_cfg.ld  linux-toolchain.cmake  project.cmake  toolchain.cmake  win-toolchain.cmake
